--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
     <item
+        android:id="@+id/home"
+        android:icon="@drawable/icone_home"
+        app:showAsAction="always"
+        android:title="@string/nova_transacao"/>
+
+
+    <item
         android:id="@+id/add"
         android:icon="@drawable/icone_add"
         app:showAsAction="always"
@@ -26,4 +33,6 @@
         app:showAsAction="never"
         android:title="@string/sair">
     </item>
+
+
 </menu>
