--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@drawable/uikitblur">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,6 +28,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_email"
+                android:background="@drawable/roundwhite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Usuário" />
@@ -39,6 +41,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_password"
+                android:background="@drawable/roundwhite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
@@ -51,6 +54,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:background="@drawable/round"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Login"/>
@@ -62,6 +66,7 @@
             android:text="Não possui uma conta? Criar uma!"
             android:gravity="center"
             android:textSize="16dip"
+            android:background="@drawable/round"
             android:onClick="addNovoUsuario"/>
 
     </LinearLayout>
