--- a/app/src/main/res/drawable/roundwhite.xml
+++ b/app/src/main/res/drawable/roundwhite.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#4fff" />
-    <corners android:bottomRightRadius="25dp"
-        android:bottomLeftRadius="25dp"
-        android:topRightRadius="25dp"
-        android:topLeftRadius="25dp"/>
+    <corners/>
 </shape>
