lista de categoria e login

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -34,6 +34,12 @@
         app:showAsAction="never"
         android:title="@string/cadastrar_categoria">
     </item>
+    <item
+        android:id="@+id/lista_categoria"
+        android:icon="@android:drawable/ic_dialog_info"
+        app:showAsAction="never"
+        android:title="@string/categoria">
+    </item>
 
     <item
         android:id="@+id/exit"
