--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -4,14 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.fean.gerenciadorfinanceiro.GraficoActivity">
+    tools:context="br.com.fean.gerenciadorfinanceiro.activity.GraficoActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="368dp"
+        android:background="@drawable/grafico"
         android:layout_height="495dp"
-        android:textSize="40dp"
-        android:text="grafico"
         tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="0dp" />
-
+        tools:layout_editor_absolurteX="8dp" />
 </android.support.constraint.ConstraintLayout>
