--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="br.com.fean.gerenciadorfinanceiro.TelaInicialActivity">
+    tools:context="br.com.fean.gerenciadorfinanceiro.activity.TelaInicialActivity">
 
     <FrameLayout
         android:id="@+id/content"
