--- a/app/src/main/res/menu/menu_categoria.xml
+++ b/app/src/main/res/menu/menu_categoria.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".activity.MainActivity">
 
     <item
         android:id="@+id/add"
-        android:icon="@drawable/icone_mais"
+        android:icon="@drawable/icone_confirmar"
         app:showAsAction="always"
         android:title="@string/nova_transacao"/>
 
@@ -34,6 +34,8 @@
         app:showAsAction="never"
         android:title="@string/sair">
     </item>
+
+
 
 
 </menu>
