--- a/app/src/main/res/menu/menu_categoria.xml
+++ b/app/src/main/res/menu/menu_categoria.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/add"
-        android:icon="@drawable/icone_confirmar"
+        android:icon="@drawable/icone_mais"
         app:showAsAction="always"
         android:title="@string/nova_transacao"/>
 
