--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -30,6 +30,13 @@
     </item>
 
     <item
+        android:id="@+id/lista_usuario"
+        android:icon="@android:drawable/ic_dialog_info"
+        app:showAsAction="never"
+        android:title="@string/usuario">
+    </item>
+
+    <item
         android:id="@+id/about"
         android:icon="@android:drawable/ic_dialog_info"
         app:showAsAction="never"
