--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.fean.gerenciadorfinanceiro.activity.GraficoActivity">
+    tools:context="br.com.fean.gerenciadorfinanceiro.GraficoActivity">
 
     <ImageView
         android:layout_width="368dp"
